syntax = "proto3";

package user;

option java_multiple_files = true;

service UserService {
  rpc CheckUserExistence (UserRequest) returns (UserExistenceResponse);
  rpc GetUserInfo (UserRequest) returns (UserInfoResponse);
  rpc CheckUserExistenceByRole (UserRoleRequest) returns (UserExistenceResponse);
  rpc GetUserInfoByRole (UserRoleRequest) returns (UserInfoByRoleResponse);
}

message UserRequest {
  int64 user_id = 1;
}

message UserExistenceResponse {
  bool exists = 1;
}

message UserInfoResponse {
  bool exists = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
  int64 phone = 5;
  string role = 6;
}

message UserRoleRequest {
  int64 user_id = 1;
  string expected_role = 2;
}

message UserInfoByRoleResponse {
  bool exists = 1;
  string email = 2;
  string name = 3;
  string surname = 4;
  int64 phone = 5;
}
